--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.19.1",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.4"
   },
