--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "firebase": "^9.19.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.6",
+    "@expo/vector-icons": "^13.0.0",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
