--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "@expo/vector-icons": "^13.0.0",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native": "0.71.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
