--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
