--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
-    "react-native-reanimated": "~2.14.4"
+    "@react-native-community/datetimepicker": "6.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
