--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^9.19.1",
     "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
-    "@react-native-community/datetimepicker": "6.7.3"
+    "expo-sqlite": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
