--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.9",
+    "expo-sqlite": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-dotenv": "^3.4.8",
     "react-native-reanimated": "~2.14.4",
-    "react-native-svg": "13.4.0",
-    "expo-sqlite": "~11.1.1"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
