--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native": "0.71.6",
     "react-native-dotenv": "^3.4.8",
     "react-native-reanimated": "~2.14.4",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "expo-constants": "~14.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
